# mgconsole

./: .clang-format  .gitignore  CMakeLists.txt  DockerFile  Dockerfile  README.md  build-generic-linux.sh
.github/workflows/: build-test.yml  ci.yml  release.yml
sql2graph/: main.py  requirements.txt
src/: CMakeLists.txt  batch_import.cpp  batch_import.hpp  interactive.cpp  interactive.hpp  main.cpp  parsing.cpp  parsing.hpp  serial_import.cpp  serial_import.hpp  version.hpp.in
src/utils/: CMakeLists.txt  assert.hpp  bolt.cpp  bolt.hpp  constants.hpp  date.hpp  future.hpp  notifier.hpp  query_type.hpp  synchronized.hpp  thread_pool.cpp  thread_pool.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  run-tests.sh  test-static.sh
tests/dataset_benchmark/: .gitignore  run.sh
tests/input/: temporal.txt
tests/input_output/: CMakeLists.txt  prepare.cypher  run-tests.sh
tests/input_output/input/: enum.txt  spatial.txt  temporal.txt
tests/input_output/output_csv/: enum.txt  multiline_query.txt  spatial.txt  temporal.txt
tests/input_output/output_tabular/: enum.txt  multiline_query.txt  spatial.txt  temporal.txt
tests/output_csv/: multiple_columns.txt  temporal.txt
tests/output_tabular/: multiple_columns.txt  temporal.txt
